<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_player_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        android:textSize="@dimen/ts_20"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_rock_com"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:src="@drawable/batu"
        android:scaleType="fitXY"
        android:background="@null"
        android:contentDescription="@string/image_batu"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_scissor_com"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:src="@drawable/gunting"
        android:scaleType="fitXY"
        android:background="@null"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:contentDescription="@string/image_gunting"
        app:layout_constraintTop_toBottomOf="@id/ib_rock_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_paper_com"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:src="@drawable/kertas"
        android:scaleType="fitXY"
        android:background="@null"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:contentDescription="@string/image_kertas"
        app:layout_constraintTop_toBottomOf="@id/ib_scissor_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>