<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20dp">

        <TextView
            android:id="@+id/tv_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/greeting"
            android:textSize="@dimen/ts_24"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        Bingung cara pake binding jika ada include-->
<!--        <LinearLayout-->
<!--            android:id="@+id/content_suit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="@dimen/dimen_30dp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/btn_reset"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/tv_game_title">-->

<!--            <include-->
<!--                android:id="@+id/layout_suit"-->
<!--                layout="@layout/layout_suit" />-->
<!--        </LinearLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_player_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title">

            <TextView
                android:id="@+id/tv_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textSize="@dimen/ts_20"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_rock"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/batu"
                android:scaleType="fitXY"
                android:background="@null"
                android:contentDescription="@string/image_batu"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_player1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_scissor"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/gunting"
                android:scaleType="fitXY"
                android:background="@null"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:contentDescription="@string/image_gunting"
                app:layout_constraintTop_toBottomOf="@id/ib_rock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_paper"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/kertas"
                android:scaleType="fitXY"
                android:background="@null"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:contentDescription="@string/image_kertas"
                app:layout_constraintTop_toBottomOf="@id/ib_scissor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            app:cardBackgroundColor="#CE323D59"
            app:cardCornerRadius="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintStart_toEndOf="@id/cl_player_one"
            app:layout_constraintEnd_toStartOf="@id/cl_player_com"
            app:layout_constraintBottom_toBottomOf="@id/cl_player_one"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp">

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/versus"
                    android:maxLines="2"
                    android:textSize="@dimen/ts_14"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="@dimen/dimen_10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_player_com"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_game_title">

            <TextView
                android:id="@+id/tv_player_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:textSize="@dimen/ts_20"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_rock_com"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/batu"
                android:scaleType="fitXY"
                android:background="@null"
                android:contentDescription="@string/image_batu"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_player_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_scissor_com"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/gunting"
                android:scaleType="fitXY"
                android:background="@null"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:contentDescription="@string/image_gunting"
                app:layout_constraintTop_toBottomOf="@id/ib_rock_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/ib_paper_com"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:src="@drawable/kertas"
                android:scaleType="fitXY"
                android:background="@null"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:contentDescription="@string/image_kertas"
                app:layout_constraintTop_toBottomOf="@id/ib_scissor_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn_reset"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:src="@drawable/refresh"
            android:scaleType="fitXY"
            android:background="@null"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:contentDescription="@string/button_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_player_com"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>